AEM-1 Css checked.

--- a/ui.apps/src/main/content/jcr_root/apps/aem-bootcamp/components/structure/page-shell/partials/head.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-bootcamp/components/structure/page-shell/partials/head.html
@@ -1,104 +1,88 @@
+<template data-sly-template.head="">
 
-<template data-sly-template.head=""> 
+	<meta http-equiv="content-type" content="text/html;charset=UTF-8"
+		data-sly-use.head="head.js"
+		data-sly-use.headlibRenderer="headlibs.html"
+		data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html" />
 
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" 
+	<metadata-sly-test.keywords ="${head.keywords}" name="keywords"
+		content="${keywords}" />
 
-data-sly-use.head="head.js" 
+	<metadata-sly-test.description
+		="${head.description}" name="description" content="${description}" />
 
-data-sly-use.headlibRenderer="headlibs.html" 
+	<sly data-sly-include="author.html" />
 
-data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html"/> 
+	<sly
+		data-sly-include="/libs/cq/cloudserviceconfigs/components/servicelibs/servicelibs.jsp" />
 
-<metadata-sly-test.keywords="${head.keywords}" name="keywords" content="${keywords}"/> 
+	<sly data-sly-test.faviconpath="${head.faviconPath}">
 
-<metadata-sly-test.description="${head.description}" name="description" 
+	<link rel="icon " type="image/vnd.microsoft.icon" href="${faviconpath}">
 
-content="${description}"/> 
+	<link rel="shortcuticon" type="image/vnd.microsoft.icon"
+		href="${faviconpath}">
 
-<sly data-sly-include="author.html"/> 
+	</sly>
 
-<sly data-sly-include="/libs/cq/cloudserviceconfigs/components/servicelibs/servicelibs.jsp"/> 
+	<title>${properties.jcr:title}</title>
 
-<sly data-sly-test.faviconpath="${head.faviconPath}"> 
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 
-<link rel="icon "type="image/vnd.microsoft.icon" href="${faviconpath}"> 
 
-<link rel="shortcuticon" type="image/vnd.microsoft.icon" href="${faviconpath}"> 
 
-</sly> 
+	<link rel="shortcuticon"
+		href="/apps/aem-bootcamp/clientlib-site/img/favicon/favicon.ico"
+		type="image/x-icon">
 
-<title>${properties.jcr:title}</title> 
+	<link rel="icon"
+		href="/apps/aem-bootcamp/clientlib-site/img/favicon/favicon.ico"
+		type="image/x-icon">
 
-<meta name="viewport" content="width=device-width,initial-scale=1"> 
+	<link rel="apple-touch-icon" sizes="57x57"
+		href="/apps/aem-bootcamp/clientlib-site/img/favicon/apple-icon-57x57.png">
 
- 
+	<link rel="apple-touch-icon" sizes="60x60"
+		href="/apps/aem-bootcamp/clientlib-site/img/favicon/apple-icon-60x60.png">
 
-<link rel="shortcuticon" href="/apps/aem-bootcamp/clientlib-site/img/favicon/favicon.ico" 
+	<link rel="apple-touch-icon" sizes="72x72"
+		href="/apps/aem-bootcamp/clientlib-site/img/favicon/apple-icon-72x72.png">
 
-type="image/x-icon"> 
+	<link rel="apple-touch-icon" sizes="76x76"
+		href="/apps/aem-bootcamp/clientlib-site/img/favicon/apple-icon-76x76.png">
 
-<link rel="icon" href="/apps/aem-bootcamp/clientlib-site/img/favicon/favicon.ico" 
+	<link rel="apple-touch-icon" sizes="114x114"
+		href="/apps/aem-bootcamp/clientlib-site/img/favicon/apple-icon-114x114.png">
 
-type="image/x-icon"> 
+	<link rel="apple-touch-icon" sizes="120x120"
+		href="/apps/aem-bootcamp/clientlib-site/img/favicon/apple-icon-120x120.png">
 
-<link rel="apple-touch-icon" sizes="57x57" 
+	<link rel="apple-touch-icon" sizes="144x144"
+		href="/apps/aem-bootcamp/clientlib-site/img/favicon/apple-icon-144x144.png">
 
-href="/apps/aem-bootcamp/clientlib-site/img/favicon/apple-icon-57x57.png"> 
+	<link rel="apple-touch-icon" sizes="152x152"
+		href="/apps/aem-bootcamp/clientlib-site/img/favicon/apple-icon-152x152.png">
 
-<link rel="apple-touch-icon" sizes="60x60" 
+	<link rel="apple-touch-icon" sizes="180x180"
+		href="/apps/aem-bootcamp/clientlib-site/img/favicon/apple-icon-180x180.png">
 
-href="/apps/aem-bootcamp/clientlib-site/img/favicon/apple-icon-60x60.png"> 
+	<link rel="icon" type="image/png" sizes="192x192"
+		href="/apps/aem-bootcamp/clientlib-site/img/favicon/android-icon-192x192.png">
 
-<link rel="apple-touch-icon" sizes="72x72" 
+	<link rel="icon" type="image/png" sizes="32x32"
+		href="/apps/aem-bootcamp/clientlib-site/img/favicon/favicon-32x32.png">
 
-href="/apps/aem-bootcamp/clientlib-site/img/favicon/apple-icon-72x72.png"> 
+	<link rel="icon" type="image/png" sizes="96x96"
+		href="/apps/aem-bootcamp/clientlib-site/img/favicon/favicon-96x96.png">
 
-<link rel="apple-touch-icon" sizes="76x76" 
+	<link rel="icon" type="image/png" sizes="16x16"
+		href="/apps/aem-bootcamp/clientlib-site/img/favicon/favicon-16x16.png">
 
-href="/apps/aem-bootcamp/clientlib-site/img/favicon/apple-icon-76x76.png"> 
+	<meta name="msapplication-TileColor" content="#ffffff">
 
-<link rel="apple-touch-icon" sizes="114x114" 
+	<meta name="msapplication-TileImage"
+		content="/apps/aem-bootcamp/clientlib-site/img/favicon/ms-icon-144x144.png">
 
-href="/apps/aem-bootcamp/clientlib-site/img/favicon/apple-icon-114x114.png"> 
+	<meta name="theme-color" content="#ffffff">
 
-<link rel="apple-touch-icon" sizes="120x120" 
-
-href="/apps/aem-bootcamp/clientlib-site/img/favicon/apple-icon-120x120.png"> 
-
-<link rel="apple-touch-icon" sizes="144x144" 
-
-href="/apps/aem-bootcamp/clientlib-site/img/favicon/apple-icon-144x144.png"> 
-
-<link rel="apple-touch-icon" sizes="152x152" 
-
-href="/apps/aem-bootcamp/clientlib-site/img/favicon/apple-icon-152x152.png"> 
-
-<link rel="apple-touch-icon" sizes="180x180" 
-
-href="/apps/aem-bootcamp/clientlib-site/img/favicon/apple-icon-180x180.png"> 
-
-<link rel="icon" type="image/png" sizes="192x192" 
-
-href="/apps/aem-bootcamp/clientlib-site/img/favicon/android-icon-192x192.png"> 
-
-<link rel="icon" type="image/png" sizes="32x32" 
-
-href="/apps/aem-bootcamp/clientlib-site/img/favicon/favicon-32x32.png"> 
-
-<link rel="icon" type="image/png" sizes="96x96" 
-
-href="/apps/aem-bootcamp/clientlib-site/img/favicon/favicon-96x96.png"> 
-
-<link rel="icon" type="image/png" sizes="16x16" 
-
-href="/apps/aem-bootcamp/clientlib-site/img/favicon/favicon-16x16.png"> 
-
-<meta name="msapplication-TileColor" content="#ffffff"> 
-
-<meta name="msapplication-TileImage" 
-
-content="/apps/aem-bootcamp/clientlib-site/img/favicon/ms-icon-144x144.png"> 
-
-<meta name="theme-color" content="#ffffff"> 
-
-</template> 
+</template>
