AEM-1: Expected result except css rendering.

--- a/ui.apps/src/main/content/jcr_root/apps/aem-bootcamp/components/structure/page-shell/partials/footer.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-bootcamp/components/structure/page-shell/partials/footer.html
@@ -1,5 +1,5 @@
 <template data-sly-template.footer=""> 
-Footer Component.
+This is footer component
 <div data-sly-resource="${'footer-par' @resourceType='wcm/foundation/components/iparsys'}" 
 
 data-sly-unwrap></div> 
