--- a/ui.apps/src/main/content/jcr_root/apps/aem-bootcamp/components/structure/page-shell/partials/header.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-bootcamp/components/structure/page-shell/partials/header.html
@@ -1,5 +1,5 @@
 <template data-sly-template.header=""> 
-Header Component.
+Header Component
 <div data-sly-resource="${'header-par' @resourceType='wcm/foundation/components/iparsys'}" 
 
 data-sly-unwrap></div> 
