--- a/ui.apps/src/main/content/jcr_root/apps/aem-bootcamp/components/structure/page-shell/partials/content.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-bootcamp/components/structure/page-shell/partials/content.html
@@ -1,5 +1,8 @@
 <template data-sly-template.content=""> 
 
-This is Base Page 
+<div data-sly-resource="${'hero-image' @ resourceType='/apps/aem-bootcamp/components/general/hero-image'}"></div>
+
+<div data-sly-resource="${'primary' @resourceType='wcm/foundation/components/iparsys'}" ></div>
+<div data-sly-resource="${'secondary' @resourceType='wcm/foundation/components/iparsys'}" ></div>
 
 </template> 
