--- a/ui.apps/src/main/content/jcr_root/apps/aem-bootcamp/components/structure/page-shell/partials/content.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-bootcamp/components/structure/page-shell/partials/content.html
@@ -1,8 +1,5 @@
 <template data-sly-template.content=""> 
 
-<div data-sly-resource="${'hero-image' @ resourceType='/apps/aem-bootcamp/components/general/hero-image'}"></div>
-
-<div data-sly-resource="${'primary' @resourceType='wcm/foundation/components/iparsys'}" ></div>
-<div data-sly-resource="${'secondary' @resourceType='wcm/foundation/components/iparsys'}" ></div>
+this is base page
 
 </template> 
